test/Fail/LocalRewriteConstraint.err
LocalRewriteConstraint.agda:14.11-16: error: [UnequalTerms]
The terms
  x
and
  zero
are not equal at type Nat
when checking the following local rewrite rule constraint:
   |-  x  =  0  :  Nat
when checking that p is a valid argument to a function of type
(@rew _ : x ≡ 0) → Nat
